# nonprofit-data-gatherer

./: .env.example  README.md  pyproject.toml
sql/: 001_initial_schema.sql
src/nonprofit_platform/: __init__.py  cli.py  config.py  logging.py
src/nonprofit_platform/db/: connection.py  repository.py
src/nonprofit_platform/enrichment/: __init__.py  openai_client.py  profile_builder.py
src/nonprofit_platform/indexing/: __init__.py  adapter.py  null_adapter.py
src/nonprofit_platform/jobs/: __init__.py  claiming.py  enrich_profiles.py  extract_filings.py  filing_discovery.py  orchestrator.py  raw_fetch.py  registry_sync.py  update_embeddings.py
src/nonprofit_platform/parsers/form990/: __init__.py  extractor.py  xml_utils.py
src/nonprofit_platform/sources/: irs_filings.py  irs_registry.py
src/nonprofit_platform/storage/: supabase.py
tests/: test_form990_extractor.py  test_job_claiming.py  test_orchestrator.py  test_profile_builder.py
tests/fixtures/form990/: sample_990.xml
